--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -166,12 +166,6 @@ a:focus, a:hover, a:active {
   line-height: 3.19444rem;
 }
 
-.terms-of-service h1 a:link, .privacy-policy h1 a:link, .terms-of-service h1 a:visited, .privacy-policy h1 a:visited {
-  color: #005c5c;
-}
-.terms-of-service h1 a:focus, .privacy-policy h1 a:focus, .terms-of-service h1 a:hover, .privacy-policy h1 a:hover, .terms-of-service h1 a:active, .privacy-policy h1 a:active {
-  color: #760014;
-}
 .terms-of-service h2, .privacy-policy h2 {
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
   margin-bottom: 12px;
@@ -179,11 +173,19 @@ a:focus, a:hover, a:active {
   text-transform: uppercase;
   font-weight: bold;
 }
+
 .terms-of-service h3, .privacy-policy h3 {
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
   margin-top: 23px;
   margin-top: 1.27778rem;
   text-transform: uppercase;
+}
+
+.terms-of-service h1 a:link, .privacy-policy h1 a:link, .terms-of-service h1 a:visited, .privacy-policy h1 a:visited {
+  color: #005c5c;
+}
+.terms-of-service h1 a:focus, .privacy-policy h1 a:focus, .terms-of-service h1 a:hover, .privacy-policy h1 a:hover, .terms-of-service h1 a:active, .privacy-policy h1 a:active {
+  color: #760014;
 }
 
 .terms-of-service strong, .privacy-policy strong, .story-content strong {
@@ -1637,8 +1639,8 @@ body {
   box-sizing: border-box;
   width: 100%;
   float: left;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  padding-left: 0.84746%;
+  padding-right: 0.84746%;
   border-bottom-width: 1px;
   border-bottom-width: 0.05556rem;
   border-bottom-style: solid;
@@ -1655,8 +1657,8 @@ body {
   box-sizing: border-box;
   width: 25%;
   float: left;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  padding-left: 0.84746%;
+  padding-right: 0.84746%;
   font-size: 14px;
   font-size: 0.77778rem;
   line-height: 23px;
