--- a/templates/home.html
+++ b/templates/home.html
@@ -8,17 +8,61 @@
 {% block banner %}
 <div class="banner-wrap">
   {{ block.super }}
+  <p class="tag">Exploring what's possible in the world of teaching and learning.</p>
 </div>
 {% endblock %}
 
 {% block main %}
 <div class="main-wrap">
-  Hello cruel world.
+
+<h1 class="intro">
+  Technology that engages students,
+  personalizes learning,
+  and reduces teacher&nbsp;burdens.
+</h1>
+
+<section class="how">
+  <h1 class="how-title">What we offer</h1>
+  <div class="feature">
+    <h2>Individualization & differentiation</h2>
+    <p>
+      Introduce teachers to digital tools
+      that generate data on each student
+      so that teachers can be more responsive to student needs
+      and can easily personalize lessons for all students.
+    </p>
+  </div>
+
+  <div class="feature">
+    <h2>Khan Academy Integration</h2>
+    <p>
+      Work with schools and teachers
+      to implement Khan Academy in classrooms
+      efficiently and for maximum results.
+      Preliminary data shows
+      that when adopted effectively and in its entirety,
+      students’ understanding can improve
+      so much that they work up to three years ahead
+      of their grade level.
+    </p>
+  </div>
+
+  <div class="feature">
+    <h2>The “Flipped Classroom”</h2>
+    <p>
+      Help teachers to transfer the classroom lecture
+      to the student’s home after class,
+      freeing up classroom time for problem solving and project creation.
+      This allows teachers to increase the time they can spend
+      1-on-1 and in small groups with students.
+    </p>
+  </div>
+</section>
 </div>
 {% endblock %}
 
 {% block footer %}
 <div class="info-wrap">
-  {{ block.super }}
+  <p class="info">{{ block.super }}</p>
 </div>
 {% endblock %}
