--- a/templates/home.html
+++ b/templates/home.html
@@ -15,16 +15,17 @@
 {% block main %}
 <div class="main-wrap">
 
-<h1 class="intro">
-  Technology that engages students,
-  personalizes learning,
-  and reduces teacher&nbsp;burdens.
+<h1 class="why">
+  Training & technology to
+  engage students,
+  personalize learning,
+  and reduce teacher&nbsp;burdens.
 </h1>
 
-<section class="how">
-  <h1 class="how-title">What we offer</h1>
-  <div class="feature">
-    <h2>Individualization & differentiation</h2>
+<section class="what">
+  <h1 class="section-title">What we offer</h1>
+  <div class="what-block">
+    <h2 class="block-title">Personalized Learning</h2>
     <p>
       Introduce teachers to digital tools
       that generate data on each student
@@ -33,8 +34,8 @@
     </p>
   </div>
 
-  <div class="feature">
-    <h2>Khan Academy Integration</h2>
+  <div class="what-block">
+    <h2 class="block-title">Khan Academy Integration</h2>
     <p>
       Work with schools and teachers
       to implement Khan Academy in classrooms
@@ -47,8 +48,8 @@
     </p>
   </div>
 
-  <div class="feature">
-    <h2>The “Flipped Classroom”</h2>
+  <div class="what-block">
+    <h2 class="block-title">The “Flipped Classroom”</h2>
     <p>
       Help teachers to transfer the classroom lecture
       to the student’s home after class,
@@ -58,6 +59,43 @@
     </p>
   </div>
 </section>
+
+<section class="who">
+  <h1 class="section-title">Who We Are</h1>
+
+  <div class="who-block">
+    <h2 class="block-title vcard peter">Peter Kuperman</h2>
+    <p>
+      Peter Kuperman has a background in asset management.
+      He has invested over 1,200 volunteer hours
+      working with Khan Academy mapping content to curriculum,
+      leading a team of 14
+      to build the first version of the teacher’s resource section
+      and coding exercises for the knowledge map.
+      His infectious enthusiasm resulted in
+      Sal Khan making his first ever trip to Canada
+      to meet business and education leaders.
+    </p>
+  </div>
+
+  <div class="who-block">
+    <h2 class="block-title vcard emmanuelle">Emmanuelle Deaton</h2>
+    <p>
+      Emmanuelle Deaton is a veteran teacher
+      with eight years in the classroom.
+      She has worked in multiple school systems
+      with a range of different administrative teams.
+      She understands where teachers are coming from
+      and how to coach them
+      so that they can play in the 21st century arena.
+      Her focus is on having high student engagement,
+      great collaboration amongst students,
+      skill development,
+      and teaching students higher order thinking skills.
+    </p>
+  </div>
+</section>
+
 </div>
 {% endblock %}
 
