--- a/templates/home.html
+++ b/templates/home.html
@@ -66,15 +66,15 @@
   <div class="who-block">
     <h2 class="block-title vcard peter">Peter Kuperman</h2>
     <p>
-      Peter Kuperman has a background in asset management.
+      Peter Kuperman
+      has a background in asset management.
       He has invested over 1,200 volunteer hours
-      working with Khan Academy mapping content to curriculum,
-      leading a team of 14
-      to build the first version of the teacher’s resource section
+      for Khan Academy: mapping content to curriculum,
+      leading a team of 14 to build the teacher’s resource section,
       and coding exercises for the knowledge map.
-      His infectious enthusiasm resulted in
-      Sal Khan making his first ever trip to Canada
-      to meet business and education leaders.
+      His infectious enthusiasm inspired
+      Sal Khan to make his first ever trip to Canada
+      for meetings with business & education leaders.
     </p>
   </div>
 
@@ -84,14 +84,13 @@
       Emmanuelle Deaton is a veteran teacher
       with eight years in the classroom.
       She has worked in multiple school systems
-      with a range of different administrative teams.
-      She understands where teachers are coming from
-      and how to coach them
-      so that they can play in the 21st century arena.
-      Her focus is on having high student engagement,
-      great collaboration amongst students,
+      with a range of administrative teams.
+      She understands teachers
+      and how to coach them for the 21st century arena.
+      Her focus is on
+      high student engagement & collaboration,
       skill development,
-      and teaching students higher order thinking skills.
+      and higher-order thinking.
     </p>
   </div>
 </section>
