--- a/templates/home.html
+++ b/templates/home.html
@@ -66,7 +66,7 @@
   <div class="who-block">
     <h2 class="block-title vcard peter">Peter Kuperman</h2>
     <p>
-      Peter Kuperman
+      Peter
       has a background in asset management.
       He has invested over 1,200 volunteer hours
       for Khan Academy: mapping content to curriculum,
@@ -81,7 +81,7 @@
   <div class="who-block">
     <h2 class="block-title vcard emmanuelle">Emmanuelle Deaton</h2>
     <p>
-      Emmanuelle Deaton is a veteran teacher
+      Emmanuelle is a veteran teacher
       with eight years in the classroom.
       She has worked in multiple school systems
       with a range of administrative teams.
