--- a/sass/knet/_layout.scss
+++ b/sass/knet/_layout.scss
@@ -3,6 +3,10 @@
 
 @include set-grid(70em 12 .25 inside);
 
+$back: color(95%);
+
+html { background: $back; }
+
 %container {
   > [class$="-wrap"] {
     @include container;
@@ -13,34 +17,115 @@
 %boilerplate {
   @extend %container;
   @include rhythm-padding(.5);
-  background: color(lightest, .25);
+  background: color(80%, .8);
 }
 
 // Banner
 // ------
 
+$feature-shadow-color: color($base, .25);
+$feature-shadow-size: 6px;
+
 [role="banner"] {
   @extend %boilerplate;
-  @include serif;
-  .brand { font-weight: bold; }
+  @include stretch-x;
+  @include box-shadow(color($feature-shadow-color,.75) 0 0 $feature-shadow-size);
+  .brand {
+    @include span(50%);
+    @include serif;
+    font-weight: bold;
+  }
+  .page-nav {
+    @include span(last 50%);
+    text-align: right;
+    a {
+      display: inline-block;
+      + a { @include before(' | ') { color: $base; } }
+    }
+  }
 }
 
-// Main
-// ----
+// Feature
+// -------
 
-[role="main"] {
+$feature-shadow : $feature-shadow-color,
+                  transparent $feature-shadow-size;
+$feature-grad   : color(-25% lighter $blue),
+                  color(-50% lighter $blue),
+                  color(-50% lighter $green),
+                  color(-25% light $blue);
+
+.feature {
   @extend %container;
-  @extend %type;
-  @include rhythm-padding(2);
+  @include pie-clearfix;
+  @include rhythm-padding(3.5,3);
+  @include background(
+    linear-gradient(to top, $feature-shadow...) no-repeat scroll,
+    linear-gradient(to bottom right, $feature-grad...) no-repeat fixed
+  );
 }
 
-.why {
-  @extend %main-title;
-  @include padding-leader;
-  @include trailing-border(2px, 3);
-  @include trailer;
-  border-bottom: 2px dotted color(lightest,.5);
+%large-title {
+  @include serif;
+  @include adjust-font-size-to($xxlargepx);
 }
+
+.intro {
+  @extend %large-title;
+  @include trailer(2.5);
+  text-shadow: color(white,.5) 0 1px 0;
+  text-align: center;
+}
+
+.feature-links { @include pad(rhythm(1)); }
+
+.feature-title { @extend %sub-title; }
+
+$feature-offset: 3%;
+
+.feature-block {
+  @include rhythm-borders(1px, 1.5);
+  @include box-shadow($base 0 0 3px inset);
+  float: left;
+  width: span(percentage(1/3) - $feature-offset);
+  margin-right: -200%;
+  background: color(white, .8);
+  border-color: $base;
+
+  &.pyo {
+    @include border-left-radius(rhythm(.25));
+    border-right: 0;
+  }
+
+  &.consult {
+    @include adjust-font-size-to($medpx);
+    @include leader(-1);
+    @include h-borders(1px, 2);
+    @include box-shadow($base 0 0 6px);
+    @include transition(all 300ms);
+    position: relative;
+    width: span(percentage(1/3) + ($feature-offset * 2));
+    margin-left: percentage(1/3) - $feature-offset;
+    background: color(white, .85);
+    color: $accent;
+    z-index: 10;
+
+    #{$focus} {
+      @include scale(1.1);
+      background: white;
+    }
+  }
+
+  &.tcs {
+    @include border-right-radius(rhythm(.25));
+    float: right;
+    margin-right: 0;
+    border-left: 0;
+  }
+}
+
+// Sections
+// --------
 
 .section-title {
   @include serif;
@@ -50,21 +135,45 @@
   text-transform: uppercase;
 }
 
-.what, .who { @include clearfix; }
+.what, .who, .why {
+  @extend %container;
+  > [class$="-wrap"] {
+    @include pie-clearfix;
+    @include rhythm-padding(2);
+  }
+}
 
 .block-title { @extend %sub-title; }
 
-.what {
-  @include trailing-border(2px, 1);
-  border-bottom: 2px dotted color(lightest,.5);
+.why {
+  @include arrow(top center $back $largepx, 2px solid color($base, .25));
+  z-index: 20;
+
+  > [class$="-wrap"] {
+    @include background(image-url('girl.svg') no-repeat scroll span(1) center);
+    @include background-size(span(5) auto);
+    @include rhythm-padding(4);
+  }
+
+  h1, p { @include pre(6); }
+
+  h1 { @extend %main-title; }
+  p {
+    @include serif;
+    @include adjust-font-size-to($medpx);
+    font-weight: bold;
+  }
 }
 
 .what-block {
   @include gallery(4, of-type);
 }
 
-.who {
-  @include padding-leader;
+.who, .what {
+  > [class$="-wrap"] {
+    @include leading-border(2px, 2);
+    border-top: 2px dotted color(light,.5);
+  }
 }
 
 .who-block {
