--- a/static/css/knet.css
+++ b/static/css/knet.css
@@ -911,13 +911,13 @@ html {
   background: #f8f8f8;
 }
 
-[role="banner"] > [class$="-wrap"], [role="contentinfo"] > [class$="-wrap"], .feature > [class$="-wrap"], .what > [class$="-wrap"], .who > [class$="-wrap"], .why > [class$="-wrap"] {
+[role="banner"] > [class$="-wrap"], [role="contentinfo"] > [class$="-wrap"], .feature > [class$="-wrap"], .what > [class$="-wrap"], .who > [class$="-wrap"], .why > [class$="-wrap"], .contact > [class$="-wrap"] {
   max-width: 70em;
   margin-left: auto;
   margin-right: auto;
   padding: 0 0.63889rem;
 }
-[role="banner"] > [class$="-wrap"]:after, [role="contentinfo"] > [class$="-wrap"]:after, .feature > [class$="-wrap"]:after, .what > [class$="-wrap"]:after, .who > [class$="-wrap"]:after, .why > [class$="-wrap"]:after {
+[role="banner"] > [class$="-wrap"]:after, [role="contentinfo"] > [class$="-wrap"]:after, .feature > [class$="-wrap"]:after, .what > [class$="-wrap"]:after, .who > [class$="-wrap"]:after, .why > [class$="-wrap"]:after, .contact > [class$="-wrap"]:after {
   content: "";
   display: table;
   clear: both;
@@ -1091,13 +1091,13 @@ html {
   text-transform: uppercase;
 }
 
-.what > [class$="-wrap"], .who > [class$="-wrap"], .why > [class$="-wrap"] {
+.what > [class$="-wrap"], .who > [class$="-wrap"], .why > [class$="-wrap"], .contact > [class$="-wrap"] {
   padding-top: 46px;
   padding-top: 2.55556rem;
   padding-bottom: 46px;
   padding-bottom: 2.55556rem;
 }
-.what > [class$="-wrap"]:after, .who > [class$="-wrap"]:after, .why > [class$="-wrap"]:after {
+.what > [class$="-wrap"]:after, .who > [class$="-wrap"]:after, .why > [class$="-wrap"]:after, .contact > [class$="-wrap"]:after {
   content: "";
   display: table;
   clear: both;
@@ -1171,7 +1171,7 @@ html {
   clear: none;
 }
 
-.who > [class$="-wrap"], .what > [class$="-wrap"] {
+.who > [class$="-wrap"], .what > [class$="-wrap"], .contact > [class$="-wrap"] {
   border-top-width: 2px;
   border-top-width: 0.11111rem;
   border-top-style: solid;
@@ -1197,6 +1197,33 @@ html {
 .who-block:nth-of-type(2n + 2) {
   margin-left: 50%;
   clear: none;
+}
+
+.contact-block {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 33.33333%;
+  float: left;
+  margin-right: -100%;
+  padding-left: 0.84746%;
+  padding-right: 0.84746%;
+}
+.contact-block:nth-of-type(3n + 1) {
+  margin-left: 0;
+  clear: left;
+}
+.contact-block:nth-of-type(3n + 2) {
+  margin-left: 33.33333%;
+  clear: none;
+}
+.contact-block:nth-of-type(3n + 3) {
+  margin-left: 66.66667%;
+  clear: none;
+}
+.contact-block .block-title {
+  margin-bottom: 0px;
+  margin-bottom: 0rem;
 }
 
 .info {
