--- a/templates/home.html
+++ b/templates/home.html
@@ -129,6 +129,47 @@
   </div>
 </div>
 </section>
+
+<section id="contact" class="contact">
+<div class="contact-wrap">
+  <h1 class="section-title">Contact Us</h1>
+
+  <article class="vcard knet contact-block">
+    <h1 class="fn block-title">The K Network</h1>
+    <div class="adr">
+      <span class="street-address">75 Arbor Lane</span>,
+      <span class="extended-address">Suite L</span>
+      <div>
+        <span class="locality">Menlo Park</span>,
+        <span class="region">CA</span>
+        <span class="postal-code">94025</span>
+      </div>
+    </div>
+  </article>
+
+  <article class="vcard emmanuelle contact-block">
+    <h1 class="fn block-title">Emmanuelle Deaton</h1>
+    <a href="mailto:emmanuelle(put the 'at' sign here)theknetwork.org" class="email">emmanuelle(put the 'at' sign here)theknetwork.org</a>
+    <div class="tel">
+      <span class="value">613-304-3030</span>
+      <span class="type">(Canada)</span>
+    </div>
+  </article>
+
+  <article class="vcard peter contact-block">
+    <h1 class="fn block-title">Peter Kuperman</h1>
+    <a href="mailto:peter(put the 'at' sign here)theknetwork.org" class="email">peter(put the 'at' sign here)theknetwork.org</a>
+    <div class="tel">
+      <span class="value">416-992-9972</span>
+      <span class="type">(Canada)</span>
+    </div>
+    <div class="tel">
+      <span class="value">212-625-1833</span>
+      <span class="type">(United States)</span>
+    </div>
+  </article>
+</div>
+</section>
 {% endblock %}
 
 {% block footer %}
