--- a/sass/knet.scss
+++ b/sass/knet.scss
@@ -7,6 +7,11 @@
 // ------
 
 @import "knet/layout";
+@import "knet/banner";
+@import "knet/contentinfo";
 
 // Modules
 // -------
+
+@import "knet/feature";
+@import "knet/sections";
